k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  template:
    spec:
      containers:
      - name: front
        image: docker.pkg.github.com/git-gud-ndli/ndli2k19/front:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80
          name: http
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 200Mi
