k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
