k8s/front/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - secretName: git-gud-fr
    hosts:
    - git-gud.fr
    - www.git-gud.fr
  rules:
  - host: git-gud.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: front
          servicePort: 80
